# zoom-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LOCAL-SECURITY.md  README.md  SECURITY.md  TASKS.md  cli.py  pyproject.toml
.claude/: settings.json
.claude/skills/: codebase-introspection.md  env-safe.md  mcp-security.md
.github/workflows/: ci.yml  release.yml
docs/: comparative-analysis.md
examples/: batch-meetings-with-rate-limit.py  download-recent-recordings.sh  list-active-users.sh
scripts/: codegen.py
tests/: conftest.py  test_api_chat.py  test_api_client.py  test_api_dashboard.py  test_api_meetings.py  test_api_phone.py  test_api_recordings.py  test_api_reports.py  test_api_users.py  test_auth.py  test_cli.py  test_codegen.py  test_commands.py  test_oauth.py  test_pagination.py  test_rate_limit.py  test_secrets.py  test_user_oauth.py  test_utils.py  test_webhook.py
zoom_cli/: __init__.py  __main__.py  auth.py  commands.py  secrets.py  utils.py
zoom_cli/api/: __init__.py  chat.py  client.py  dashboard.py  meetings.py  oauth.py  pagination.py  phone.py  rate_limit.py  recordings.py  reports.py  user_oauth.py  users.py  webhook.py
