[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoom_cli"
dynamic = ["version"]
description = "Save and launch Zoom meetings from the command line"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Thomas Monfre", email = "tmonfre1@gmail.com" },
]
maintainers = [
    { name = "Jordan Ryan", email = "jordan@facetinteractive.com" },
]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Conferencing",
]
dependencies = [
    "click>=8.1,<9",
    "click-default-group>=1.2.4,<2",
    "questionary>=2.0,<3",
    "keyring>=24.0,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "types-setuptools",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
zoom_cli = "zoom_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/jordan8037310/zoom-cli"
Upstream = "https://github.com/tmonfre/zoom-cli"
Issues = "https://github.com/jordan8037310/zoom-cli/issues"

[tool.setuptools]
packages = ["zoom_cli"]

[tool.setuptools.dynamic]
version = { attr = "zoom_cli.__version__" }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:questionary.*",
    "ignore::DeprecationWarning:prompt_toolkit.*",
]

[tool.coverage.run]
branch = true
source = ["zoom_cli"]
omit = ["zoom_cli/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["zoom_cli", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "S",   # bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "S101",  # asserts allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["zoom_cli"]
